force-app/main/default/objects/Explore_Rating_Scale__c/Explore_Rating_Scale__c.object-meta.xml
<CustomObject>
    <description>This object is meant to be used to create the scales which will be used within GDM Explore. Each Scale will be assigned to an Explore Rating.</description>
    <label>Explore Rating Scale</label>
    <nameField>
        <label>Explore Rating Scale Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Explore Rating Scales</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>