force-app/main/default/objects/Explore_Rating_Scale__c/fields/Increment__c.field-meta.xml
<CustomField>
    <fullName>Increment__c</fullName>
    <inlineHelpText>This field is only to be used when the Scale Type is a Slide Bar - Number</inlineHelpText>
    <label>Increment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>.5</fullName>
            </value>
            <value>
                <fullName>.1</fullName>
            </value>
            <value>
                <fullName>.01</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>