force-app/main/default/objects/Explore_Rating_Scale__c/fields/Scale_Type__c.field-meta.xml
<CustomField>
    <fullName>Scale_Type__c</fullName>
    <inlineHelpText>This will determine the type of scale that will be shown within the GDM Explore App for any Explore Rating with this Explore Rating Scale assigned</inlineHelpText>
    <label>Scale Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Slide Bar - Text</fullName>
            </value>
            <value>
                <fullName>Slide Bar - Number</fullName>
            </value>
            <value>
                <fullName>Slide Bar - 2 Bar</fullName>
            </value>
            <value>
                <fullName>Manual Entry - Text</fullName>
            </value>
            <value>
                <fullName>Manual Entry - Number</fullName>
            </value>
            <value>
                <fullName>Radio Dial</fullName>
            </value>
            <value>
                <fullName>Julian Wheel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>