force-app/main/default/objects/Explore_Rating_Scale__c/fields/Values_Number_Range__c.field-meta.xml
<CustomField>
    <fullName>Values_Number_Range__c</fullName>
    <inlineHelpText>Use this field if your Scale Type uses Numbers. Enter your number range here. Enter with no spaces, separated by a dash. Ex. &quot;1-5&quot;</inlineHelpText>
    <label>Values - Number Range</label>
    <type>TextArea</type>
</CustomField>