force-app/main/default/objects/Explore_Rating_Scale__c/fields/Values_Text__c.field-meta.xml
<CustomField>
    <fullName>Values_Text__c</fullName>
    <inlineHelpText>If the Scale Type is Slide Bar - Text - enter the Text Values here.
Separate Values with a COMMA and a SPACE</inlineHelpText>
    <label>Values - Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>