force-app/main/default/objects/Explore_Rating_Scale__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Scale_Type__c</columns>
    <columns>Values_Text__c</columns>
    <columns>Values_Number_Range__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>